# mupen64plus-input-sdl

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSES  README  README.md  RELEASE  appveyor.yml
.github/workflows/: build.yml  schedule.yml
data/: InputAutoCfg.ini
projects/VisualStudio2013/: mupen64plus-input-sdl.vcxproj
projects/VisualStudio2015/: mupen64plus-input-sdl.vcxproj
projects/VisualStudio2017/: mupen64plus-input-sdl.vcxproj
projects/cmake/: CMakeLists.txt
projects/msvc/: mupen64plus-input-sdl.vcxproj
projects/msvc10/: mupen64plus-input-sdl.vcxproj
projects/msvc11/: mupen64plus-input-sdl.vcxproj
projects/msvc8/: mupen64plus-input-sdl.vcproj
projects/unix/: Makefile
src/: autoconfig.c  autoconfig.h  config.c  config.h  osal_preproc.h  plugin.c  plugin.h  sdl_key_converter.h  version.h
